Fix: react select z-index:10

--- a/src/common/template/custom.css
+++ b/src/common/template/custom.css
@@ -116,3 +116,7 @@ hr.dashed {
 .collapsed-box > .box-body {
     display: none;
 }
+
+.search-select__menu {
+    z-index: 10;
+}
